<resources>
    <string name="app_name">BikeShare</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="register">Register</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_having_account">Have an Account?</string>
    <string name="log_in">Log In</string>
    <string name="not_having_account">Dont have an Account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="logout">Logout</string>
    <string name="enter_dob">Enter Date of Birth</string>
    <string name="email">Email</string>
    <string name="title_activity_maps">Map</string>
    <string name="permission_rationale_location">Location is required for use</string>
    <string name="permission_required_toast">Location permission required for use</string>
    <string name="location_permission_denied">No access to location information</string>
</resources>