<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#304769"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:padding="30dp"
        android:scrollbars="vertical"
        tools:context="e.group.login.RegisterActivity">


        <EditText
            android:id="@+id/etFirstName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@android:color/white"
            android:hint="@string/first_name"
            android:inputType="textPersonName"
            android:padding="10dp" />

        <EditText
            android:id="@+id/etLastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@android:color/white"
            android:hint="@string/last_name"
            android:inputType="textPersonName"
            android:padding="10dp" />

        <EditText
            android:id="@+id/etUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@android:color/white"
            android:hint="@string/username"
            android:inputType="textPersonName"
            android:padding="10dp" />


        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@android:color/white"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="10dp" />

        <EditText
            android:id="@+id/etConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@android:color/white"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:padding="10dp" />

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@android:color/white"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="10dp" />

        <EditText
            android:id="@+id/etDoB"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@android:color/white"
            android:hint="@string/enter_dob"
            android:inputType="date"
            android:padding="10dp"
            android:verticalScrollbarPosition="defaultPosition" />

        <Button
            android:id="@+id/btnRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="#f05924"
            android:text="@string/register"
            android:textColor="@android:color/white" />


        <Button
            android:id="@+id/btnRegisterLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="#aaa"
            android:text="@string/log_in"
            android:textColor="@android:color/white" />

    </LinearLayout>
</ScrollView>